--- a/WebDev/Node/package.json
+++ b/WebDev/Node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch server.js"
+    "start": "node --watch --env-file=.env server2.js"
   },
   "author": "Joon Hugh",
   "license": "MIT",
