--- a/WebDev/blog-project/package.json
+++ b/WebDev/blog-project/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch --env-file=.env server.js"
+    "start": "node --watch --env-file=.env backend/server.js"
   },
   "keywords": [],
   "author": "",
