--- a/WebDev/blog-project/frontend/package.json
+++ b/WebDev/blog-project/frontend/package.json
@@ -17,7 +17,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-scroll-parallax": "^3.4.5"
+    "react-router-dom": "^7.6.2",
+    "react-scroll-parallax": "^3.4.5",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
