--- a/WebDev/blog-project/package.json
+++ b/WebDev/blog-project/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch --env-file=.env backend/server.js"
+    "start": "node --watch --env-file=.env backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm start\" \"npm run vite\""
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "framer-motion": "^12.16.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
