--- a/WebDev/blog-project/package.json
+++ b/WebDev/blog-project/package.json
@@ -14,14 +14,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "framer-motion": "^12.16.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
