--- a/WebDev/blog-project/package.json
+++ b/WebDev/blog-project/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tinymce/tinymce-react": "^6.2.1",
     "@uiw/react-md-editor": "^4.0.7",
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
