--- a/WebDev/blog-project/package.json
+++ b/WebDev/blog-project/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.16.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
