--- a/WebDev/blog-project/frontend/package.json
+++ b/WebDev/blog-project/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-scroll-parallax": "^3.4.5",
