--- a/WebDev/blog-project/frontend/package.json
+++ b/WebDev/blog-project/frontend/package.json
@@ -29,7 +29,8 @@
     "react-scroll-parallax": "^3.4.5",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
