--- a/WebDev/blog-project/frontend/package.json
+++ b/WebDev/blog-project/frontend/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
