--- a/WebDev/blog-project/frontend/package.json
+++ b/WebDev/blog-project/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-mui-sidebar": "^1.6.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-scroll-parallax": "^3.4.5",
